Update bios and headhshots (#6)

--- a/our-team.html
+++ b/our-team.html
@@ -842,7 +842,7 @@
                         <!--<img src="img/team-2021/Rubaina Farin 1.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2021/Rubaina Farin 2.jpg';"
                         onmouseout="this.src='img/team-2021/Rubaina Farin 1.jpg';">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2023/Talia Yawney.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Talia Yawney</h4>
@@ -1219,7 +1219,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-5 ">
-                    <div class="member" data-toggle="modal" data-target="#cassidyt" >
+                    <div class="member" data-toggle="modal" data-target="#cassidyt">
                         <!-- <img src=" img/team-2022/Lauren Altomare 1.png" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Lauren Altomare 2.jpg';"
                         onmouseout="this.src='img/team-2022/Lauren Altomare 1.png';"> -->
@@ -1397,6 +1397,26 @@
                                     <a href="mailto:conference.webmaster@wise.skule.ca"><i
                                             class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/helenli28/" target="_blank"><i
+                                            class="fa fa-linkedin"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-5 ">
+                    <div class="member" data-toggle="modal" data-target="#wandaj">
+                        <!--<img src="img/team-2022/Sophie Sun 1.jpg" class="img-fluid"
+                        onmouseover="this.src='img/team-2022/Sophie Sun 2.jpg';"
+                        onmouseout="this.src='img/team-2022/Sophie Sun 1.jpg';">-->
+                        <img src="img/team-2023/" class="img-fluid">
+                        <div class="member-info">
+                            <div class="member-info-content-long">
+                                <h4>Wanda Janaeska</h4>
+                                <span>Conference Advisor</span>
+                                <h5>Engineering Science</h5>
+                                <div class="social">
+                                    <a href="www.linkedin.com/in/wanda-janaeska-1550b71b3 " target="_blank"><i
                                             class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -2296,7 +2316,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="wandaj" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="wandaj" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
 
             <div class="modal-content">
@@ -2306,9 +2326,9 @@
                     </button>
                 </div>
 
-                <!-- <div class="modal-header">
+                <div class="modal-header">
                     <img src="img/speakers/kathryn-cropped.png" alt="avatar" class="rounded-circle img-responsive">
-                </div> -->
+                </div> 
 
                 <div class="modal-body text-center">
                     <h1>Wanda Janaeska</h1>
@@ -2330,6 +2350,7 @@
             </div>
         </div>
     </div>
+-->
 
     <!-- <div class="modal fade" id="asmas" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
@@ -3135,12 +3156,16 @@
 
                 <div class="modal-body text-center">
                     <h1>Talia Yawney</h1>
-                    <a href="mailto:outreach.events@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="mailto:vp.outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                     <a href="https://ca.linkedin.com/in/talia-yawney" target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <p>Hello! My name is Talia and I am a Chem 2T5 + PEY. When I am not studying, you’ll find me hiking
-                        outdoors, attending indie concerts or rock climbing at a nearby gym. I am so excited to run
-                        engaging events for young women in our community and help foster an interest in STEM for their
-                        future careers!</p>
+                    <p>Hello! My name is Talia and I am one of the VPs of Outreach this year! I am a third-year chemical
+                        engineering student (Chem 2T5 + PEY) minoring in sustainable energy and engineering business. I
+                        love spending time outdoors, running, climbing and reading. I'm passionate about equity, both
+                        for women and the environment. Outreach events, such as Go Eng Girl, are the reason I am
+                        studying to be an engineer and I am so excited to inspire other young girls and non-binary
+                        individuals to pursue careers in STEM. This year, the WISE Outreach team is focussing on
+                        providing new collaborative events for our community in addition to our annual High School
+                        Conference and International Women’s Day Gala. </p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
