--- a/opportunities.html
+++ b/opportunities.html
@@ -280,9 +280,9 @@
 
                 </div>
 
-                <button type="button" style="margin:10px;" class="collapsible">Master’s and PhD Opportunities in Intelligent Systems and Control Theory at the University of Toronto Description</button>
+                <button type="button" style="margin:10px;" class="collapsible">Master’s and PhD Opportunities in Intelligent Systems and Control Theory at the University of Toronto</button>
                 <div class="content">
-                    <p><b>Master’s and PhD Opportunities in Intelligent Systems and Control Theory at the University of Toronto Description:</b></p>
+                    <p><b>Master’s and PhD Opportunities in Intelligent Systems and Control Theory at the University of Toronto</b></p>
                     <p>Intelligent control systems are all around us. From a car’s automatic braking system to the inner workings of the human brain, control systems influence our lives everyday. We are the Systems Controls Group at the University of Toronto, and we specialize in the analysis, design, and control of intelligent systems, working on both theory and applications. We are looking for PhD and Master’s students to join our respective research groups.</p>
                     <p>Prof. Mireille E. Broucke specializes in systems neuroscience, which is about the use of control theory to understand the human brain.<a href="https://www.control.utoronto.ca/~broucke/">https://www.control.utoronto.ca/~broucke/</a></p>
                     <p>Prof. Margaret Chapman studies noisy control systems with applications to healthcare and misinformation spreading. <a href="https://www.control.utoronto.ca/~mchapman/index.html">https://www.control.utoronto.ca/~mchapman/index.html</a></p>
