--- a/our-team.html
+++ b/our-team.html
@@ -1409,9 +1409,9 @@
                         <!--<img src="img/team-2022/Sophie Sun 1.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Sophie Sun 2.jpg';"
                         onmouseout="this.src='img/team-2022/Sophie Sun 1.jpg';">-->
-                        <img src="img/team-2023/" class="img-fluid">
+                        <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
-                            <div class="member-info-content-long">
+                            <div class="member-info-content">
                                 <h4>Wanda Janaeska</h4>
                                 <span>Conference Advisor</span>
                                 <h5>Engineering Science</h5>
