Update headshots and bios (#6)

--- a/our-team.html
+++ b/our-team.html
@@ -106,9 +106,6 @@
             <div class="row justify-content-md-center">
                 <div class="col-lg-3 col-md-5 ">
                     <div class="member" data-toggle="modal" data-target="#sophies">
-                        <!--img src="img/team-2021/Hana 1.jpg" class="img-fluid"
-                        onmouseover="this.src='img/team-2021/Hana 2.jpg';"
-                        onmouseout="this.src='img/team-2021/Hana 1.jpg';"-->
                         <img src="img/team-2023/Sophie Sun.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
@@ -116,7 +113,7 @@
                                 <span>Co-President</span>
                                 <h5>Engineering Science</h5>
                                 <div class="social">
-                                    <a href="mailto:president@wiseuoft.org"><i class="fa fa-envelope"></i></a>
+                                    <a href="mailto:president@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="www.linkedin.com/in/sophiesun01" target="_blank"><i
                                             class="fa fa-linkedin"></i></a>
                                 </div>
@@ -258,13 +255,14 @@
                         <!--<img src="img/team/Tiffanie Li 1.jpeg" class="img-fluid"
                         onmouseover="this.src='img/team/Tiffanie Li 2.jpeg';"
                         onmouseout="this.src='img/team/Tiffanie Li 1.jpeg';">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2023/Lauren Altomare.png" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Lauren Altomare</h4>
                                 <span>Chapter Outreach Director</span>
                                 <h5>Engineering Science</h5>
                                 <div class="social">
+                                    <a href="mailto:internal.outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="https://www.linkedin.com/in/lauren-altomare/" target="_blank"><i
                                             class="fa fa-linkedin"></i></a>
                                 </div>
@@ -394,6 +392,7 @@
                                 <div class="social">
                                     <a href="https://www.linkedin.com/in/hibahhussain/" target="_blank"><i
                                             class="fa fa-linkedin"></i></a>
+                                    <a href="mailto:vp.finance@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -432,6 +431,7 @@
                                 <div class="social">
                                     <a href="https://www.linkedin.com/in/maha-zainab-83a6ab258/" target="_blank"><i
                                             class="fa fa-linkedin"></i></a>
+
                                 </div>
                             </div>
                         </div>
@@ -739,8 +739,7 @@
                                 <span>PD Operations Director</span>
                                 <h5>Genome Biology and Cell and Molecular Biology</h5>
                                 <div class="social">
-                                    <a href="mailto:pd.operations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                    <a href="www.linkedin.com/in/lanlin-he-921279255" target="_blank"><i
+                                    <a href="www.linkedin.com/in/trisha-singh19" target="_blank"><i
                                             class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -1409,14 +1408,14 @@
                         <!--<img src="img/team-2022/Sophie Sun 1.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Sophie Sun 2.jpg';"
                         onmouseout="this.src='img/team-2022/Sophie Sun 1.jpg';">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2023/Wanda Janaeska.png" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Wanda Janaeska</h4>
                                 <span>Conference Advisor</span>
                                 <h5>Engineering Science</h5>
                                 <div class="social">
-                                    <a href="www.linkedin.com/in/wanda-janaeska-1550b71b3 " target="_blank"><i
+                                    <a href="www.linkedin.com/in/wanda-janaeska" target="_blank"><i
                                             class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -1649,6 +1648,35 @@
                         be! I love the community of women supporting women and being part of growing that community.
                         Other than that, I enjoy binging a good tv show or listening to music, trying out new or usual
                         go to food places. </p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="trishas" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body text-center">
+                    <h1>Trisha Singh</h1>
+                    <a href="www.linkedin.com/in/trisha-singh19" target="_blank"><i
+                            class="fa fa-linkedin"></i></a>
+                    <p>Hi! I'm Trisha, a third-year student doing a double major in Cell and Molecular Biology and
+                        Genome Biology with a minor in Immunology. In my free time, I enjoy watching movies and shows,
+                        as well as exploring new places and engaging in thrilling activities. It is my first year on
+                        WISE and so i'm super excited to immerse myself within the WISE community and meet new people.
+                        Moreover, I hope that through our professional development initiatives, we are able to empower
+                        those in STEM fields and help them make new connections. </p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
@@ -1905,10 +1933,11 @@
                     <a href="mailto:vp.finance@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                     <a href="https://www.linkedin.com/in/lavanya-mehndiratta/" target="_blank"><i
                             class="fa fa-linkedin"></i></a>
-                    <p>I'm in my third year of Computer Engineering with a minor in AI. I love sketching and painting,
-                        cooking, watching standup comedy and exploring new places around the city! I'm really excited
-                        for our in person National Conference which we have all been waiting for! P.S. if you have a
-                        dog, let's be friends!! :)</p>
+                    <p>Hi! I'm Lavanya and I'm on PEY this year, currently completing Computer Engineering with a minor
+                        in AI. I love exploring different forms of art - my current favourites are sketching and
+                        crocheting/knitting! I have been attending WISE events since I was in highschool and have been
+                        on the Finance team for 3 years now. I'm really looking forward to our return to a 2-day
+                        in-person National Conference and dressing up for the International Women's Day Gala! :)</p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
@@ -2045,14 +2074,44 @@
 
                 <div class="modal-body text-center">
                     <h1>Sophie Sun</h1>
-                    <a href="mailto:conference.internal@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="mailto:president@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                     <a href="https://www.linkedin.com/in/sophie-sun-/" target="_blank"><i
                             class="fa fa-linkedin"></i></a>
-                    <p>Hello, my name is Sophie, I’m a third year student in Engineering Science majoring in Electrical
-                        and Computer Engineering. I’m super excited to be this year’s conference webmaster! I love to go
-                        hiking and running and I’m exploring the process of making a bunch of fermented foods! I’m most
-                        looking forward to the conference being back in person this year and meeting everyone face to
-                        face!!</p>
+                    <p>Hello! My name is Sophie. I'm in engsci specializing in ECE but currently I'm on my PEY year at
+                        Intel. I'm super excited to be one of the co-president's alongside Armita this year! I love to
+                        run, hike, paddle and make random fermented foods and baked goods for my friends! This is my 3rd
+                        year as a part of WISE and I'm excited for the incredible events the team has planned for this
+                        year and the unforgettable memories we'll make while doing it! </p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="armitak" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body text-center">
+                    <h1>Armita Khashayardoost</h1>
+                    <a href="mailto:president@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/armitadoost/" target="_blank"><i
+                            class="fa fa-linkedin"></i></a>
+                    <p>This year I am super excited to be one of the WISE Presidents alongside Sophie. We have some big
+                        plans for the year and many many fun events organized with our amazing team!! We are hoping to
+                        offer all of you many opportunities to further develop professional skills, give back to the
+                        community, learn and get inspired from other women, build strong connections, and overall feel
+                        supported as you pursue an education or career in STEM. We hope to see you at our events in the
+                        near future!!</p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
@@ -2316,7 +2375,7 @@
         </div>
     </div>
 
-    <!-- <div class="modal fade" id="wandaj" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="wandaj" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
 
             <div class="modal-content">
@@ -2326,22 +2385,20 @@
                     </button>
                 </div>
 
-                <div class="modal-header">
-                    <img src="img/speakers/kathryn-cropped.png" alt="avatar" class="rounded-circle img-responsive">
-                </div> 
-
                 <div class="modal-body text-center">
                     <h1>Wanda Janaeska</h1>
-                    <a href="mailto:conference.internal@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                    <a href="mailto:conference.relations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                     <a href="https://www.linkedin.com/in/wanda-janaeska/" target="_blank"><i
                             class="fa fa-linkedin"></i></a>
-                    <p>Wanda is currently in her third year pursuing a BASc in Engineering Science specializing in
-                        Biomedical Systems Engineering. She is super excited to now be leading a team of amazing
-                        individuals in planning WISE's biggest annual conference. In the past 3 years, she has learned
-                        so much from attending WISENC and she can't wait to be able to provide more of these
-                        opportunities to students! She loves skating, hiking, reading non-fiction, and has recently
-                        picked up film photography as a hobby.</p>
+                    <p>Hi everyone! My name is Wanda, and I am a Biomedical Systems Engineering Science student
+                        currently in my PEY year. I am taking on the role of an Advisor to the Conference team, as well
+                        as spearheading the program for our amazing First Year Representatives. I have been with WISE
+                        ever since my first-year at UofT as a First Year Representative; in second year I joined the
+                        Conference team as their Internal Logistics Director and fell in love with the role and
+                        Conference as a whole; which led to my role in third year as the Conference Co-Chair. Since the
+                        first year I joined WISE, I have been continuously amazed and excited by the work we have been
+                        able to do in making the STEAM fields accessible for cis and trans women, as well as non-binary
+                        folks. I intend to continue the foundational work past WISE members have laid out for us this
+                        year and the coming year to ensure STEAM remains accessible and reachable for all. </p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
@@ -2350,7 +2407,7 @@
             </div>
         </div>
     </div>
--->
+
 
     <!-- <div class="modal fade" id="asmas" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
@@ -2788,6 +2845,36 @@
         </div>
     </div>
 
+    <div class="modal fade" id="mahaz" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body text-center">
+                    <h1>Maha Zainab</h1>
+                    <a href="mailto:vp.finance@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/maha-zainab-83a6ab258/" target="_blank"><i
+                            class="fa fa-linkedin"></i></a>
+                    <p>Hi!!! I'm Maha, a second-year Materials Engineering student. I am the director of Business
+                        Relations for WISE, which is perfect because I'm also working towards a minor in business. I
+                        love baking (I make the best cheesecake), outdoor activities and woodwork. Fun-fact about me is
+                        I recently built my own rocket and launched it in upstate New York. I love that by being part of
+                        WISE I have to opportunity to help women that have an undiscovered passion for science and
+                        engineering. </p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <div class="modal fade" id="katerinav" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
@@ -3214,12 +3301,15 @@
 
                 <div class="modal-body text-center">
                     <h1>Lauren Altomare</h1>
-                    <a href="mailto:conference.relations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                    <p>Hello! My name is Lauren and I'm entering my first year studying Engineering Science. I love to
-                        play the piano, ranging from Baroque fugues to jazz ballades. Aside from music, I enjoy
-                        composing poetry, running and cycling around the city. As a Conference Panels Co-Director, I
-                        look forward to gathering a diversity of speakers alongside an incredibly supportive team. I
-                        can't wait to facilitate the empowerment of self-identifying women at the conference this year!
+                    <a href="mailto:internal.outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/lauren-altomare/" target="_blank"><i
+                            class="fa fa-linkedin"></i></a>
+                    <p>Hello! I’m Lauren, an EngSci 2T6, planning on pursuing the biomedical systems major. With a
+                        passion for all things biology, AI and entrepreneurship, I enjoy pursuing projects at the nexus
+                        of the fields. Outside of school, I enjoy being, well, outdoors—running, hiking, cycling,
+                        playing ultimate frisbee—or exploring poetry and playing the piano. As the Chapter Outreach
+                        Director, I look forward to connecting WISE Chapters across the country through both in-person
+                        and virtual events, strengthening our community.
                     </p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
