--- a/opportunities.html
+++ b/opportunities.html
@@ -294,6 +294,38 @@
                         application. Applicants to the PhD program are expected to have prior research experience, and a typical PhD applicant will have (or will be working toward) a research-based Master’s degree. Note that the MASc and PhD degree programs are fully funded. We appreciate your consideration, and we hope to see your application.</p>
                 </div>
 
+                <button type="button" style="margin:10px;" class="collapsible">Wet Lab Spaces for Health Science Startups</button>
+                <div class="content">
+                    <p><b>November 14th | 2023 Pitch Perfect Competition</b></p>
+                    <p>Join <b>Health Innovation Hub (H2i)</b> and <b>MaRS</b> on <b>Wednesday November 22nd</b> for an in-person event exploring how early-stage health science startups are navigating their wet lab space needs. This panel and networking event will cultivate conversation between entrepreneurs and wet lab space providers—with a unique panel featuring speakers from startups, labs, academia, hospitals, real estate, advocacy coalitions and more. Learn what is currently available, gain insight into navigating existing challenges, and join the important conversation of how we can collaborate to continue growing a local, thriving wet-based venture community. <b>Learn more and register at: <a href="https://h2i.utoronto.ca/event/wet-lab-spaces-for-health-science-startups/">https://h2i.utoronto.ca/event/wet-lab-spaces-for-health-science-startups/</a></b></p>
+                </div>
+
+                <button type="button" style="margin:10px;" class="collapsible">2023 Pitch Perfect Competition</button>
+                <div class="content">
+                    <p><b>November 22nd | Wet Lab Spaces for Health Science Startups</b></p>
+                    <p><b>Pitch Perfect</b> is a Temerty Faculty of Medicine and Health Innovation Hub (H2i) initiative to celebrate and support student entrepreneurs working on health focused innovations. The event will showcase 6 student-based ventures who will have just 5-minutes to capture their innovative concept as they pitch to a panel of expert judges. 3 of the teams will win a $5000 Student Innovation Fellowship to help develop their project further. Join us in-person on <b>November 14th</b> for networking and interaction with the community! Food and refreshments will be provided. <b>Learn more and register at: <a href="https://h2i.utoronto.ca/event/pitch-perfect-2023/">https://h2i.utoronto.ca/event/pitch-perfect-2023/</a></b></p>
+                </div>
+
+                <button type="button" style="margin:10px;" class="collapsible">BMO In-Person Led Workshop - Let’s Solve Resume Mysteries</button>
+                <div class="content">
+                    <p>Career Exploration & Education (CxED), Student Life invites you to attend the employer led <b>in-person</b> workshop - <b>Bank of Montreal (BMO)</b> - <i>"Let's Solve Resume Mysteries: Building Effective Resumes & Navigating ATS"</i>.</p>
+                    <p style="margin-bottom:0;">You'll gain valuable insights, practical skills and knowledge needed to craft an effective and targeted resume that will capture the attention of employers and help you successfully navigate the intricacies of Applicant Tracking Systems (ATS). You will also learn and understand firsthand from a recruiter's perspective how to:</p>
+                    <ul>
+                        <li><b>Connect with experts:</b> Interact with <b>Bank of Montreal (BMO) recruiters</b> who will share insider tips and real workplace applications and insights.</li>
+                        <li><b>Craft an effective resume:</b> Learn how to tailor a resume by analysing a job posting and identifying and showcasing your skills, experience, and knowledge.</li>
+                        <li><b>Crack the ATS (Applicant Tracking System) code:</b> Discover strategies to crack the ATS systems, ensuring your resume gets noticed by recruiters and HR professionals.</li>
+                        <li><b>Empower your career:</b> Take control of your career journey and increase your chances of landing interviews and job offers.</li>
+                    </ul>
+
+                    <p><i>Register for the workshop (Tuesday, November 14th) and secure your spot! </i></p>
+                    <p><b>Date/Time:</b> Tuesday, November 14, 2023 at 1:30 PM (2 hours, including a break time)</p>
+                    <p><b>Location:</b>  Room 301 (Conference Room), Experiential Learning Commons (ELC) Building, 255 Beverley Street, Toronto, ON M5T 1Z4 *</p>
+                    <p><b>Target audience:</b> All U of T students and recent graduates 2 years </p>
+                    <p><b>Registration:</b> <a href="https://clnx.utoronto.ca/events.htm?evtId=59136">https://clnx.utoronto.ca/events.htm?evtId=59136</a></p>
+                    <p><b>Questions:</b>  If you have any questions or require any accommodation, please email Career Exploration & Education at <a href="mailto: events@careers.utoronto.ca">events@careers.utoronto.ca</a></p>
+                    <p>*The ELC Building is on the southeast corner of Beverley and College. The building entrance is on Beverley - 255 Beverley St. Take the elevator to the 3rd floor, turn right and walk to the end of the hall. Walk through the doors, turn right and you'll see the open conference room straight ahead.</p>
+                </div>
+
 
                 <!-- <button type="button" class="collapsible">Performance Improvement Consultant (Full Time)</button>
                 <div class="content">
@@ -320,7 +352,7 @@
                     }
                     </script>
                 
-                <p class="align"><i>Last updated: November 6, 2023</i></p>
+                <p class="align"><i>Last updated: November 9, 2023</i></p>
             </div>     
         </section>
 	</main>
